Bug 1308316 - ensure Skia disables hinting if Fontconfig disables it. r=jrmuizel, a=gchang

MozReview-Commit-ID: KGQfXQ82qfJ